2006-01-13  Thomas Hellstrom  <unichrome-at-shipmail-dot-org>

	* configure.ac:
	* src/xvmc/Makefile.am:
	* src/xvmc/driDrawable.c: (drawStamp), (getDRIDrawableInfoLocked),
	(driDestroyHashContents):
	* src/xvmc/driDrawable.h:
	* src/xvmc/unichrome/.cvsignore:
	* src/xvmc/unichrome/Makefile.am:
	* src/xvmc/unichrome/viaLowLevel.c:
	* src/xvmc/unichromeProA/.cvsignore:
	* src/xvmc/unichromeProA/Makefile.am:
	* src/xvmc/unichromeProA/viaLowLevelPro.c:
	* src/xvmc/viaLowLevel.c: (hwlLock), (hwlUnlock), (timeDiff),
	(setAGPSyncLowLevel), (viaDMATimeStampLowLevel),
	(viaDMAWaitTimeStamp), (viaDMAInitTimeStamp),
	(viaDMACleanupTimeStamp), (viaMpegGetStatus), (viaMpegIsBusy),
	(syncDMA), (syncVideo), (syncAccel), (syncMpeg), (pciFlush),
	(agpFlush), (flushXvMCLowLevel), (flushPCIXvMCLowLevel),
	(pciCommand), (viaMpegSetSurfaceStride), (viaVideoSetSWFLipLocked),
	(viaVideoSWFlipLocked), (viaMpegSetFB), (viaMpegBeginPicture),
	(viaMpegReset), (viaMpegWriteSlice), (viaVideoSubPictureOffLocked),
	(viaVideoSubPictureLocked), (viaBlit), (syncXvMCLowLevel),
	(initXvMCLowLevel), (setLowLevelLocking), (closeXvMCLowLevel):
	* src/xvmc/viaLowLevel.h:
	* src/xvmc/viaLowLevelPro.c: (initHQVShadow),
	(setHQVHWDeinterlacing), (setHQVDeblocking), (setHQVStartAddress),
	(setHQVColorSpaceConversion), (setHQVFetchLine), (setHQVScale),
	(setHQVSingleDestination), (setHQVDeinterlacing),
	(setHQVTripleBuffer), (finish_header_agp), (hwlLock), (hwlUnlock),
	(timeDiff), (setAGPSyncLowLevel), (viaDMATimeStampLowLevel),
	(viaDMAWaitTimeStamp), (viaDMAInitTimeStamp),
	(viaDMACleanupTimeStamp), (viaMpegGetStatus), (viaMpegIsBusy),
	(syncDMA), (syncVideo), (syncAccel), (syncMpeg), (pciFlush),
	(agpFlush), (uploadHQVDeinterlace), (uploadHQVShadow),
	(flushXvMCLowLevel), (flushPCIXvMCLowLevel),
	(viaMpegSetSurfaceStride), (viaVideoSetSWFLipLocked),
	(viaVideoSWFlipLocked), (viaMpegSetFB), (viaMpegBeginPicture),
	(viaMpegReset), (viaMpegWriteSlice), (viaVideoSubPictureOffLocked),